syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.ufc.smarthome.dtos";

message Device {
    string id = 1;
    string name = 2;
    repeated Sensor sensors = 3;

    message Sensor {
        int32 id = 1;
        string name = 2;
    }

    message Actuator {
        int32 id = 1;
        string name = 2;
        
        message ActuatorState {
            string stateName = 1;
        }
    }

}

message DeviceList{
    repeated Device devices = 1;
}
